WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247029
Crashes in -[WebProcessPoolCocoa registerNotificationObservers] after
255941@main
https://bugs.webkit.org/show_bug.cgi?id=247029
Summary
Crashes in -[WebProcessPoolCocoa registerNotificationObservers] after 255941@...
Tim Horton
Reported
2022-10-25 15:00:56 PDT
Crashes in -[WebProcessPoolCocoa registerNotificationObservers] after
255941@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-25 15:01:11 PDT
<
rdar://problem/101563115
>
Tim Horton
Comment 2
2022-10-25 15:03:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5779
EWS
Comment 3
2022-10-25 16:25:09 PDT
Committed
255990@main
(1ac5e9948225): <
https://commits.webkit.org/255990@main
> Reviewed commits have been landed. Closing PR #5779 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug