Crashes in -[WebProcessPoolCocoa registerNotificationObservers] after 255941@main https://bugs.webkit.org/show_bug.cgi?id=247029 rdar://101563115

Reviewed by Wenson Hsieh.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(SOFT_LINK_CONSTANT_MAY_FAIL):
(WebKit::WebProcessPool::registerNotificationObservers):
(SOFT_LINK_CONSTANT): Deleted.
The whole point of soft linking this is because it may not exist.
Use SOFT_LINK_CONSTANT_MAY_FAIL and `canLoad-` to achieve the original goal.

Canonical link: https://commits.webkit.org/255990@main